--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: ^5.4.0
   easy_localization: ^3.0.3
   firebase_analytics: ^10.8.0
+  firebase_auth: ^4.16.0
   firebase_core: ^2.24.0
   firebase_crashlytics: ^3.4.9
   flutter:
@@ -27,6 +28,7 @@ dependencies:
   lottie: ^2.7.0
   meta: ^1.10.0
   pretty_dio_logger: ^1.3.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
@@ -41,7 +43,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  generate: true
   assets:
     - assets/translations/
     - assets/animations/
